--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	paulstoffregen/Encoder@^1.4.4
+	br3ttb/PID@^1.2.1
